# lzvn

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  mkdocs.yml  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
docs/: PRD.md  index.md  privacy.md  terms.md  validation.md
docs/decisions/: 0001-length-tolerant-decode.md  0002-purpose-built-decoder.md  0003-codec-only-scope.md  0004-safety-posture.md  0005-crate-naming-collision.md  0006-caller-owned-output-buffer.md  0007-msrv-floor-decoupled-from-toolchain.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode.rs
src/: lib.rs
supply-chain/: config.toml
tests/: decode.rs  errors.rs
tests/data/: mixed.expected  mixed.lzvn  multi_block_b0.expected  multi_block_b0.lzvn  multi_block_b1.expected  multi_block_b1.lzvn  multi_block_b2.expected  multi_block_b2.lzvn  multi_block_b3.expected  multi_block_b3.lzvn  multi_block_b4.lzvn  near_random.expected  near_random.lzvn  single_block_b0.lzvn  text_repeats.expected  text_repeats.lzvn  text_small.expected  text_small.lzvn
